<resources>
    <string name="app_name">在线监测</string>
    <string name="login_title">在线监测管理系统</string>
    <string name="choice">选择</string>
    <string name="exit_app">结束程序</string>
    <string name="return_login">返回登录</string>
    <string name="auto">自动</string>
    <string name="hand">手动</string>
    <string name="no_data">暂无数据</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">添加</string>
    <string name="action_search">查询</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="please_choice">请选择</string>
    <string name="submit">提交</string>
    <string name="cancel">返回</string>
    <string name="check_all">全选</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="personal_information">个人信息</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="recording_time">录制时间</string>
    <string name="play_state">播放状态</string>
    <string name="yun_state">云台状态</string>
    <string name="yun_control">云台控制:</string>
    <string name="downloads">下载</string>
    <string name="cancels">取消</string>
    <string name="channel_choice">通道选择</string>
    <string name="date_pick">时间选择</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="the_fire">山火</string>
    <string name="the_break">外破</string>
    <string name="the_normal">普通视频</string>
    <string name="the_auto">无人机</string>
    <string name="the_sensor">传感器</string>
    <string name="name">名称</string>
    <string name="identifier">编号</string>
    <string name="sensor_name">传感器名称</string>
    <string name="sensor_add">传感器添加</string>
    <string name="sensor_identifier">传感器编号</string>
    <string name="sensor_manage">传感器\n管理</string>
    <string name="sensor_manage_2">传感器管理</string>
    <string name="sensor_information">传感器信息</string>
    <string name="equipment">设备</string>
    <string name="equipment_search">设备查找</string>
    <string name="equipment_choice">设备选择</string>
    <string name="equipment_add">设备添加</string>
    <string name="equipment_change">设备修改</string>
    <string name="equipment_manage">设备信息管理</string>
    <string name="equipment_identifier">设备编号</string>
    <string name="equipment_dvrid">DVRID</string>
    <string name="equipment_preset">预置位0度相对于北极夹角</string>
    <string name="equipment_cmaid">CMAID</string>
    <string name="equipment_eqmenid">EQMENID</string>
    <string name="equipment_sensorid">SENSORID</string>
    <string name="equipment_state">设备状态</string>
    <string name="equipment_type">设备类型</string>
    <string name="equipment_list">设备列表</string>
    <string name="change_equipment">切换设备</string>
    <string name="equipment_statistics">设备统计</string>
    <string name="new_alarm">新报警</string>
    <string name="have_no">无</string>
    <string name="history_alarm">历史报警</string>
    <string name="main">主菜单</string>
    <string name="function">功能</string>
    <string name="map">电子地图</string>
    <string name="alarm_information">报警信息</string>
    <string name="collection_time">采集时间</string>
    <string name="is_blowing_equipment">是否吹向设备</string>
    <string name="company_management">公司管理</string>
    <string name="jurisdiction">权限</string>
    <string name="jurisdiction_management">权限管理</string>
    <string name="jurisdiction_add">管理员权限添加</string>
    <string name="jurisdiction_config">管理员权限设置</string>
    <string name="tower">杆塔</string>
    <string name="tower_add">杆塔添加</string>
    <string name="tower_choice">杆塔选择</string>
    <string name="tower_name">杆塔名称</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="altitude">海拔高度</string>
    <string name="line">线路</string>
    <string name="line_management">线路管理</string>
    <string name="line_name">线路名称</string>
    <string name="line_start">起点</string>
    <string name="line_finish">终点</string>
    <string name="line_trend">线路走向</string>
    <string name="line_change">线路修改</string>
    <string name="line_add">线路新增</string>
    <string name="line_choice">线路选择</string>
    <string name="voltage_level">电压等级</string>
    <string name="download_updata">下载更新</string>
    <string name="downloading">下载中</string>
    <string name="install">安装</string>
    <string name="up_data">更新</string>
    <string name="system_management">系统管理</string>
    <string name="parameter_configuration">参数配置</string>
    <string name="condition_monitoring">状态监测</string>
    <string name="monitoring_condition">监测状态</string>
    <string name="monitoring_statistics">监测统计</string>
    <string name="company_add">添加公司</string>
    <string name="company_config">设置公司</string>
    <string name="company">公司</string>
    <string name="company_name">公司名称</string>
    <string name="company_address">地址</string>
    <string name="company_parent">上级公司</string>
    <string name="administrator">管理员</string>
    <string name="role">角色</string>
    <string name="role_name">角色名称</string>
    <string name="role_add">添加角色</string>
    <string name="role_add_hint">角色名不能为空</string>
    <string name="role_name_change">修改角色名</string>
    <string name="input_content_role_add">请输入角色名,在创建成功后设置权限</string>
    <string name="administrator_add">添加管理员</string>
    <string name="administrator_config">管理员设置</string>
    <string name="login_name">登录名</string>
    <string name="real_name">真实姓名</string>
    <string name="phone_number">移动电话</string>
    <string name="is_receive_messages">是否接收短信</string>
    <string name="receive_messages">短信接收</string>
    <string name="tower_management">杆塔管理</string>
    <string name="own_company">所属公司</string>
    <string name="password">密码</string>
    <string name="remember_passwords">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="real_time_video">实时视频</string>
    <string name="play_alarm_video">视频播放</string>
    <string name="handle_alarm">处理报警</string>
    <string name="delete_information">确认要删除吗?</string>
    <string name="loading">加载中</string>
    <string name="alarm_information_send">告警信息发送</string>
    <string name="more_information">详细信息</string>
    <string name="restart">复位</string>
    <string name="refresh">刷新</string>
    <string name="default_url">http://171.221.207.58:8080/eMonitorApp/api</string>
    <string name="not_data">暂无数据,点击按钮刷新重试</string>
    <string name="exit_information">"确认要退出吗?"</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
    <string name="ic_chevron_left">&#xe041;</string>
    <string name="ic_chevron_right">&#xe042;</string>
    <string name="ic_chromecast">&#xe043;</string>
    <string name="ic_circles">&#xe044;</string>
    <string name="ic_circles_add">&#xe045;</string>
    <string name="ic_circles_extended">&#xe046;</string>
    <string name="ic_clear">&#xe047;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_close_caption">&#xe049;</string>
    <string name="ic_cloud">&#xe04a;</string>
    <string name="ic_cloud_circle">&#xe04b;</string>
    <string name="ic_cloud_done">&#xe04c;</string>
    <string name="ic_cloud_download">&#xe04d;</string>
    <string name="ic_cloud_off">&#xe04e;</string>
    <string name="ic_cloud_queue">&#xe04f;</string>
    <string name="ic_cloud_upload">&#xe050;</string>
    <string name="ic_comment">&#xe051;</string>
    <string name="ic_communities">&#xe052;</string>
    <string name="ic_content_copy">&#xe053;</string>
    <string name="ic_content_cut">&#xe054;</string>
    <string name="ic_content_paste">&#xe055;</string>
    <string name="ic_create">&#xe056;</string>
    <string name="ic_credit_card">&#xe057;</string>
    <string name="ic_crop">&#xe058;</string>
    <string name="ic_crop_free">&#xe059;</string>
    <string name="ic_crop_landscape">&#xe05a;</string>
    <string name="ic_crop_portrait">&#xe05b;</string>
    <string name="ic_crop_square">&#xe05c;</string>
    <string name="ic_data_usage">&#xe05d;</string>
    <string name="ic_delete">&#xe05e;</string>
    <string name="ic_developer_mode">&#xe05f;</string>
    <string name="ic_dialpad">&#xe060;</string>
    <string name="ic_directions">&#xe061;</string>
    <string name="ic_directions_bike">&#xe062;</string>
    <string name="ic_directions_bus">&#xe063;</string>
    <string name="ic_directions_car">&#xe064;</string>
    <string name="ic_directions_subway">&#xe065;</string>
</resources>