<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_tower_choice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tower_choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <Spinner
        android:id="@+id/dialog_equipment_tower_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/equipment_identifier"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <EditText
        android:id="@+id/dialog_equipment_identifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/equipment_dvrid"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <EditText
        android:id="@+id/dialog_equipment_dvrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/equipment_preset"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <EditText
        android:id="@+id/dialog_equipment_preset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/equipment_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <Spinner
        android:id="@+id/dialog_equipment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/alarm_information_send"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <Spinner
        android:id="@+id/dialog_alarm_information_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/equipment_cmaid"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <EditText
        android:id="@+id/dialog_equipment_cmaid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/equipment_sensorid"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <EditText
        android:id="@+id/dialog_equipment_sensorid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/equipment_eqmenid"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/secondary_text_default_material_light" />

    <EditText
        android:id="@+id/dialog_equipment_eqmenid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

</LinearLayout>