<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/login_name"
            android:textColor="#80000000"
            android:textSize="@dimen/customTitle" />

        <EditText
            android:id="@+id/dialog_administrator_loginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#000000"
            android:textSize="@dimen/customEntry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/real_name"
            android:textColor="#80000000"
            android:textSize="@dimen/customTitle" />

        <EditText
            android:id="@+id/dialog_administrator_realName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#000000"
            android:textSize="@dimen/customEntry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/password"
            android:textColor="#80000000"
            android:textSize="@dimen/customTitle" />

        <EditText
            android:id="@+id/dialog_administrator_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#000000"
            android:textSize="@dimen/customEntry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/phone_number"
            android:textColor="#80000000"
            android:textSize="@dimen/customTitle" />

        <EditText
            android:id="@+id/dialog_administrator_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="number"
            android:textColor="#000000"
            android:textSize="@dimen/customEntry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/own_company"
            android:textColor="#80000000"
            android:textSize="@dimen/customTitle" />
        <Spinner
            android:id="@+id/dialog_administrator_company"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:textColor="#000000"
            android:textSize="@dimen/customEntry"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/receive_messages"
            android:textColor="#80000000"
            android:textSize="@dimen/customTitle" />

        <Spinner
            android:id="@+id/dialog_administrator_message"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:textColor="#000000"
            android:textSize="@dimen/customEntry"
            android:entries="@array/message"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/role"
            android:textColor="#80000000"
            android:textSize="@dimen/customTitle" />

        <Spinner
            android:id="@+id/dialog_administrator_role"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:textColor="#000000"
            android:textSize="@dimen/customEntry"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</ScrollView>