<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/video_toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:textSize="@dimen/mSubhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yun_control" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rey.material.widget.Button
                style="@style/FlatColorButtonRippleStyle"
                android:id="@+id/control_left"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_height"
                android:layout_weight="1"
                android:textColor="#FF2196F3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:text="@string/left"
                app:rd_delayClick="afterRelease"/>

            <com.rey.material.widget.Button
                style="@style/FlatColorButtonRippleStyle"
                android:id="@+id/control_up"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_height"
                android:layout_weight="1"
                android:textColor="#FF2196F3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:text="@string/up"
                app:rd_delayClick="afterRelease"/>

            <com.rey.material.widget.Button
                style="@style/FlatColorButtonRippleStyle"
                android:id="@+id/control_right"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_height"
                android:layout_weight="1"
                android:textColor="#FF2196F3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:text="@string/right"
                app:rd_delayClick="afterRelease"/>

            <com.rey.material.widget.Button
                style="@style/FlatColorButtonRippleStyle"
                android:id="@+id/control_down"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_height"
                android:layout_weight="1"
                android:textColor="#FF2196F3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:text="@string/down"
                app:rd_delayClick="afterRelease"/>

        </LinearLayout>
    </LinearLayout>

<LinearLayout
    android:id="@+id/video_information"
    android:layout_above="@id/control_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/history_video_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/line"
                android:textSize="@dimen/mSubhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/video_line_tv"
                android:layout_marginLeft="8dp"
                android:textSize="@dimen/mBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tower"
                android:textSize="@dimen/mSubhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/mBody2"
                android:id="@+id/video_tower_tv"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/recording_time"
                android:textSize="@dimen/mSubhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/video_time_tv"
                android:layout_marginLeft="8dp"
                android:textSize="@dimen/mBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/real_time_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/equipment_state"
                android:textSize="@dimen/mSubhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/mBody2"
                android:id="@+id/video_equipment_status_tv"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/play_state"
                android:textSize="@dimen/mSubhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/mBody2"
                android:id="@+id/video_play_tv"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/yun_state"
                android:textSize="@dimen/mSubhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="自动"
                android:id="@+id/video_contrl_status_tv"
                android:textSize="@dimen/mBody2"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    <io.vov.vitamio.widget.VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/video_information"
        android:layout_below="@id/video_toolbar" />

</RelativeLayout>